# mle-pe-hackathon-KodeBrotherz

./: .coverage  .dockerignore  .gitignore  Dockerfile  FAILURE_MODES.md  README.md  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  database.py  db_instrumentation.py  errors.py  logging_config.py  metrics.py  services.py  tracing.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  chaos.py  events.py  urls.py  urls_crud.py  users.py
docs/: capacity.md  decisions.md  deployment.md  environment.md  runbook.md  troubleshooting.md
infra/: alert_rules.yml  alertmanager.yml  discord.tmpl  nginx.conf  prometheus.yml  promtail.yml
infra/grafana/provisioning/dashboards/: bronze-observability.json  gold-command-center.json  nginx.json  url-shortener.json
seed/: events.csv  urls.csv  users.csv
static/: index.html
tests/: test_routes.py  test_services.py
