[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "gevent>=25.9.1",
    "gunicorn>=23.0",
    "locust>=2.32",
    "peewee>=3.17",
    "prometheus-client>=0.24.1",
    "psutil>=5.9",
    "psycopg2-binary>=2.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
]
